<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14868" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
    <device id="retina4_7" orientation="portrait" appearance="light"/>
    <dependencies>
        <deployment identifier="iOS"/>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14824"/>
        <capability name="Named colors" minToolsVersion="9.0"/>
        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--View Controller-->
        <scene sceneID="tne-QT-ifu">
            <objects>
                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="ATAlertControllerDemo" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dfc-1a-QQN">
                                <rect key="frame" x="30" y="100" width="315" height="50"/>
                                <color key="backgroundColor" name="ButtonColor"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="50" id="V4q-Jm-HMf"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <state key="normal" title="Single Buttom">
                                    <color key="titleColor" name="TextColor"/>
                                </state>
                                <connections>
                                    <action selector="oneButtonAlertPressed" destination="BYZ-38-t0r" eventType="touchUpInside" id="IBP-EK-lar"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lBO-Eb-b4w">
                                <rect key="frame" x="30" y="200" width="315" height="50"/>
                                <color key="backgroundColor" name="ButtonColor"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="50" id="Gdi-0s-36U"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <state key="normal" title="Multiple Button">
                                    <color key="titleColor" name="TextColor"/>
                                </state>
                                <connections>
                                    <action selector="multipleButtonAlertPressed" destination="BYZ-38-t0r" eventType="touchUpInside" id="KLe-C5-4rh"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pc1-e0-4mC">
                                <rect key="frame" x="30" y="300" width="315" height="50"/>
                                <color key="backgroundColor" name="ButtonColor"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="50" id="KCz-4h-dcP"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <state key="normal" title="Alert + TextField">
                                    <color key="titleColor" name="TextColor"/>
                                </state>
                                <connections>
                                    <action selector="alertWithTextFieldPressed" destination="BYZ-38-t0r" eventType="touchUpInside" id="kz8-qL-vcI"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oNv-3X-D4F">
                                <rect key="frame" x="30" y="400" width="315" height="50"/>
                                <color key="backgroundColor" name="ButtonColor"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="50" id="ExJ-nz-PO9"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <state key="normal" title="Action">
                                    <color key="titleColor" name="TextColor"/>
                                </state>
                                <connections>
                                    <action selector="actionPressed" destination="BYZ-38-t0r" eventType="touchUpInside" id="lZe-hs-Mam"/>
                                </connections>
                            </button>
                        </subviews>
                        <color key="backgroundColor" name="BackgroundColor"/>
                        <constraints>
                            <constraint firstItem="lBO-Eb-b4w" firstAttribute="top" secondItem="dfc-1a-QQN" secondAttribute="bottom" constant="50" id="2et-mw-Pko"/>
                            <constraint firstItem="pc1-e0-4mC" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="30" id="Fzy-LV-Qhh"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="lBO-Eb-b4w" secondAttribute="trailing" constant="30" id="IDf-Hr-w9n"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="pc1-e0-4mC" secondAttribute="trailing" constant="30" id="N8C-eB-pQ9"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="dfc-1a-QQN" secondAttribute="trailing" constant="30" id="O1q-eW-Gxh"/>
                            <constraint firstItem="pc1-e0-4mC" firstAttribute="top" secondItem="lBO-Eb-b4w" secondAttribute="bottom" constant="50" id="Ofz-Hx-GYl"/>
                            <constraint firstItem="lBO-Eb-b4w" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="30" id="Rgy-Fr-bUj"/>
                            <constraint firstItem="dfc-1a-QQN" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="30" id="Vk1-i2-JId"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="oNv-3X-D4F" secondAttribute="trailing" constant="30" id="YMr-M9-shl"/>
                            <constraint firstItem="oNv-3X-D4F" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="30" id="YdP-Ji-2lj"/>
                            <constraint firstItem="dfc-1a-QQN" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="100" id="dpE-0X-npk"/>
                            <constraint firstItem="oNv-3X-D4F" firstAttribute="top" secondItem="pc1-e0-4mC" secondAttribute="bottom" constant="50" id="vG2-3h-5mK"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                    </view>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="138" y="123"/>
        </scene>
    </scenes>
    <resources>
        <namedColor name="BackgroundColor">
            <color red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
        </namedColor>
        <namedColor name="ButtonColor">
            <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
        </namedColor>
        <namedColor name="TextColor">
            <color red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
        </namedColor>
    </resources>
</document>
